# refactorio

./: .gitignore  LICENSE  Makefile  README.md  refactorio.cabal  stack.yaml
app/: Main.hs
examples/: README.html  README.md  examples.md  examples.yaml  list.html  quiz.json
src/: Lib.hs
src/Rainbow/: Extra.hs
src/Refactorio/: BrickMain.hs  Config.hs  Conversions.hs  DeleteMe.hs  Engine.hs  Experiments.hs  FilenameFilter.hs  Helpers.hs  InterPrelude.hs  Legacy.hs  Lens.hs  Lenses.hs  Main.hs  Power.hs  Prelude.hs  Replace.hs  Search.hs  SpecialMode.hs  StartingPoint.hs  Style.hs  Theme.hs  Types.hs  deletemESearch.hes.hdeletemd  deletemeSearch.hs.deleteme
src/Refactorio/Prelude/: Basic.hs  C.hs  Docx.hs  Examples.hs  Haskell.hs  Html.hs  JavaScript.hs  Json.hs  Markdown.hs  Pandoc.hs  Xml.hs  Yaml.hs
src/Refactorio/Prelude/Basic/: Extra.hs
src/Streaming/: Files.hs
src/X/: Rainbow.hs  Streaming.hs
src/X/Language/Haskell/: Exts.hs  Interpreter.hs  TH.hs
src/X/Language/Haskell/Exts/: CabalUtils.hs  Prisms.hs
src/X/Language/Haskell/Exts/Prisms/: Types.hs
src/X/Streaming/: Files.hs
test/: FixtureActual.hs  FixtureExpected1.hs  SrcLocsSpec.hs
