name:                refactorio
version:             0.1.0.0
synopsis:            Lens-based refactoring toolkit.
description:         The synopsis pretty much covers it.
homepage:            https://github.com/SuperpowersCorp/refactorio#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          john@superpowerscorp.com
copyright:           2018 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Rainbow.Extra
                     , Refactorio.Config
                     , Refactorio.Experiments
                     , Refactorio.InterPrelude
                     , Refactorio.Lenses
                     , Refactorio.Main
                     , Refactorio.Prelude
                     , Refactorio.Style
                     , Streaming.Files
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , bytestring
                     , directory
                     , exceptions
                     , haskell-src-exts
                     , haskell-src-exts-prisms
                     , hint
                     , lens
                     , optparse-applicative
                     , protolude
                     , rainbow
                     , streaming
                     , text
                     , unix
                     , vty
  default-language:    Haskell2010

executable refactorio
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , directory
                     , exceptions
                     , hint
                     , lens
                     , protolude
                     , refactorio
                     , text
                     , unix
                     , vty
  default-language:    Haskell2010

test-suite refactorio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , directory
                     , exceptions
                     , hint
                     , hspec
                     , lens
                     , protolude
                     , refactorio
                     , text
                     , unix
                     , vty
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SuperpowersCorp/refactorio
