name:                refactorio
version:             0.1.0.0
synopsis:            Lens-based refactoring toolkit.
description:         The synopsis pretty much covers it.
homepage:            https://github.com/SuperpowersCorp/refactorio#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          john@superpowerscorp.com
copyright:           2018 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Refactorio.Engine
                     , Refactorio.FilenameFilter
                     , Refactorio.Helpers
                     , Refactorio.Main
                     , Refactorio.Prelude
                     , Refactorio.Theme
                     , Refactorio.Types
                     , X.Language.Haskell.Exts
                     , X.Language.Haskell.Interpreter
                     , X.Rainbow
                     , X.Streaming.Files
  build-depends:       Diff
                     , Glob
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , haskell-src-exts
                     , haskell-src-exts-prisms
                     , hint
                     , lens
                     , lens-aeson
                     , optparse-applicative
                     , pandoc
                     , pandoc-lens
                     , pretty
                     , protolude
                     , rainbow
                     , streaming
                     , string-conv
                     , text
                     , unix
                     , vty
                     , yaml
                     , zlib-lens
  default-language:    Haskell2010

executable refactorio
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Diff
                     , Glob
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , hint
                     , lens
                     , lens-aeson
                     , optparse-applicative
                     , pandoc
                     , pandoc-lens
                     , pretty
                     , protolude
                     , refactorio
                     , text
                     , unix
                     , vty
                     , yaml
                     , zlib-lens
  default-language:    Haskell2010

test-suite refactorio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Diff
                     , Glob
                     , QuickCheck
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , hint
                     , hspec
                     , lens
                     , lens-aeson
                     , pandoc
                     , pandoc-lens
                     , pretty
                     , protolude
                     , refactorio
                     , text
                     , unix
                     , vty
                     , yaml
                     , zlib-lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SuperpowersCorp/refactorio
