name:                refactorio
version:             0.1.0.0
synopsis:            Lens-based refactoring toolkit.
description:         The synopsis pretty much covers it.
homepage:            https://github.com/SuperpowersCorp/refactorio#readme
license:             BSD3
license-file:        LICENSE
author:              Superpowers Corp
maintainer:          john@superpowerscorp.com
copyright:           2018 Superpowers Corp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  exposed-modules:     Refactorio.Conversions
                     , Refactorio.Engine
                     , Refactorio.FilenameFilter
                     , Refactorio.Helpers
                     , Refactorio.Main
                     , Refactorio.Legacy
                     , Refactorio.Prelude
                     , Refactorio.Prelude.Basic
                     , Refactorio.Prelude.C
                     , Refactorio.Prelude.Haskell
                     , Refactorio.Prelude.Html
                     , Refactorio.Prelude.JavaScript
                     , Refactorio.Prelude.Json
                     , Refactorio.Prelude.Xml
                     , Refactorio.Prelude.Yaml
                     , Refactorio.SpecialMode
                     , Refactorio.Theme
                     , Refactorio.Types
                     , X.Language.Haskell.Exts
                     , X.Language.Haskell.Exts.Prisms
                     , X.Language.Haskell.Exts.Prisms.Types
                     , X.Language.Haskell.Interpreter
                     , X.Rainbow
                     , X.Streaming.Files
  build-depends:       Cabal
                     , Diff
                     , Glob
                     , aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , exceptions
                     , haskell-src-exts
                     , haskell-src-exts-prisms
                     , hexml-lens
                     , hexpat-lens
                     , hint
                     , language-c-optics
                     , language-javascript-optics
                     , lens
                     , lens-aeson
                     , lens-regex
                     , number-show
                     , optparse-applicative
                     , pandoc
                     , pandoc-lens
                     , pandoc-types
                     , pretty
                     , process
                     , profunctors
                     , protolude
                     , rainbow
                     , regex-pcre-builtin
                     , safe
                     , streaming
                     , string-conv
                     , taggy-lens
                     , text
                     , unix
                     , versions
                     , vty
                     , xml-conduit
                     , xml-html-conduit-lens
                     , xml-lens
                     , yaml
                     , zlib-lens
  default-language:    Haskell2010

executable refactorio
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Cabal
                     , Diff
                     , Glob
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , exceptions
                     , hexml-lens
                     , hexpat-lens
                     , hint
                     , language-c-optics
                     , language-javascript-optics
                     , lens
                     , lens-aeson
                     , lens-regex
                     , number-show
                     , optparse-applicative
                     , pandoc
                     , pandoc-lens
                     , pandoc-types
                     , pretty
                     , process
                     , profunctors
                     , protolude
                     , refactorio
                     , regex-pcre-builtin
                     , taggy-lens
                     , text
                     , unix
                     , versions
                     , vty
                     , xml-conduit
                     , xml-html-conduit-lens
                     , xml-lens
                     , yaml
                     , zlib-lens
  default-language:    Haskell2010

test-suite refactorio-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Cabal
                     , Diff
                     , Glob
                     , QuickCheck
                     , aeson
                     , base
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , exceptions
                     , hexml-lens
                     , hexpat-lens
                     , hint
                     , hspec
                     , language-c-optics
                     , language-javascript-optics
                     , lens
                     , lens-aeson
                     , lens-regex
                     , number-show
                     , pandoc
                     , pandoc-lens
                     , pandoc-types
                     , pretty
                     , process
                     , profunctors
                     , protolude
                     , refactorio
                     , regex-pcre-builtin
                     , taggy-lens
                     , text
                     , unix
                     , versions
                     , vty
                     , xml-conduit
                     , xml-html-conduit-lens
                     , xml-lens
                     , yaml
                     , zlib-lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SuperpowersCorp/refactorio
